WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43757
Fix compilation of VideoLayerChromium on Mac OS X with compositor
https://bugs.webkit.org/show_bug.cgi?id=43757
Summary
Fix compilation of VideoLayerChromium on Mac OS X with compositor
Kenneth Russell
Reported
2010-08-09 16:33:58 PDT
VideoLayerChromium is not compiling on Mac OS X when use_accelerated_compositing=1 in GYP_DEFINES.
Attachments
Patch
(3.73 KB, patch)
2010-08-09 16:50 PDT
,
Kenneth Russell
levin
: review+
kbr
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2010-08-09 16:50:07 PDT
Created
attachment 63952
[details]
Patch Thanks to Vangelis for initial patch.
Hin-Chung Lam
Comment 2
2010-08-09 16:51:14 PDT
Thanks for fixing this!
WebKit Review Bot
Comment 3
2010-08-09 16:52:42 PDT
Attachment 63952
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:128: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Levin
Comment 4
2010-08-09 16:59:28 PDT
Comment on
attachment 63952
[details]
Patch Please fix the tab issue before landing. (I doubt that svn will let you commit it with a tab anyway.)
Kenneth Russell
Comment 5
2010-08-09 17:01:31 PDT
(In reply to
comment #4
)
> (From update of
attachment 63952
[details]
) > Please fix the tab issue before landing. (I doubt that svn will let you commit it with a tab anyway.)
Will do.
Kenneth Russell
Comment 6
2010-08-09 17:06:33 PDT
Committed
r65018
: <
http://trac.webkit.org/changeset/65018
>
WebKit Review Bot
Comment 7
2010-08-09 21:00:52 PDT
http://trac.webkit.org/changeset/65018
might have broken Leopard Intel Debug (Tests) The following changes are on the blame list:
http://trac.webkit.org/changeset/65017
http://trac.webkit.org/changeset/65018
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug