WebCore/platform/graphics/chromium/VideoLayerChromium.cpp
@@ -56,8 +56,10 @@ PassRefPtr<VideoLayerChromium> VideoLayerChromium::create(GraphicsLayerChromium*
 VideoLayerChromium::VideoLayerChromium(GraphicsLayerChromium* owner)
     : LayerChromium(owner)
     , m_allocatedTextureId(0)
+#if PLATFORM(SKIA)
     , m_canvas(0)
     , m_skiaContext(0)
+#endif
     , m_graphicsContext(0)
 {
 }
@@ -114,7 +116,8 @@ void VideoLayerChromium::updateTextureContents(unsigned textureId)
     else
         updateTextureRect(dirtyRect, textureId);
 #else
-#error "Need to implement for your platform."
+    // FIXME: Implement non-skia path
+    notImplemented();
 #endif
 }
 
@@ -122,12 +125,13 @@ void VideoLayerChromium::createTextureRect(const IntSize& requiredTextureSize, c
 {
     // Paint into graphics context and get bitmap.
     m_owner->paintGraphicsLayerContents(*m_graphicsContext, updateRect);
+    void* pixels = 0;
+    IntSize bitmapSize = IntSize();
+#if PLATFORM(SKIA)
     const SkBitmap& bitmap = m_canvas->getDevice()->accessBitmap(false);
     const SkBitmap* skiaBitmap = &bitmap;
     ASSERT(skiaBitmap);
 
-    void* pixels = 0;
-    IntSize bitmapSize;
     SkAutoLockPixels lock(*skiaBitmap);
     SkBitmap::Config skiaConfig = skiaBitmap->config();
     // FIXME: Do we need to support more image configurations?
@@ -135,7 +139,10 @@ void VideoLayerChromium::createTextureRect(const IntSize& requiredTextureSize, c
         pixels = skiaBitmap->getPixels();
         bitmapSize = IntSize(skiaBitmap->width(), skiaBitmap->height());
     }
-
+#else
+    // FIXME: Implement non-skia path
+    notImplemented();
+#endif
     if (!pixels)
         return;
 
@@ -151,6 +158,7 @@ void VideoLayerChromium::createTextureRect(const IntSize& requiredTextureSize, c
 
 void VideoLayerChromium::updateTextureRect(const IntRect& updateRect, unsigned textureId)
 {
+#if PLATFORM(SKIA)
     const SkBitmap& bitmap = m_canvas->getDevice()->accessBitmap(true);
     SkBitmap* skiaBitmap = const_cast<SkBitmap*>(&bitmap);
     ASSERT(skiaBitmap);
@@ -167,6 +175,10 @@ void VideoLayerChromium::updateTextureRect(const IntRect& updateRect, unsigned t
     }
 
     updateCompleted();
+#else
+    // FIXME: Implement non-skia path
+    notImplemented();
+#endif
 }
 
 void VideoLayerChromium::updateCompleted()
