WebCore/platform/graphics/chromium/VideoLayerChromium.h
@@ -53,8 +53,10 @@ private:
 
     unsigned m_allocatedTextureId;
     IntSize m_allocatedTextureSize;
+#if PLATFORM(SKIA)
     OwnPtr<skia::PlatformCanvas> m_canvas;
     OwnPtr<PlatformContextSkia> m_skiaContext;
+#endif
     OwnPtr<GraphicsContext> m_graphicsContext;
 };
 
